--- a/templates/backup/pages/painel_oficial.html
+++ b/templates/backup/pages/painel_oficial.html
@@ -100,7 +100,7 @@
                 <tbody>
                     {% for d in designacoes %}
                     <tr>
-                        <td><strong>{{ d.missao.nome }}</strong></td>
+                        <td><strong>{{ d.missao.nome_completo_completo }}</strong></td>
                         <td>{{ d.get_funcao_na_missao_display }}</td>
                         <td>
                             <span class="badge badge-{% if d.complexidade == 'ALTA' %}danger{% elif d.complexidade == 'MEDIA' %}warning{% else %}success{% endif %}">
