--- a/templates/htmx/solicitacoes_unificadas_lista.html
+++ b/templates/htmx/solicitacoes_unificadas_lista.html
@@ -95,7 +95,7 @@
                 {% else %}
                 <div class="detalhe-grupo">
                     <h5>Missão</h5>
-                    <p><strong>{{ s.missao_existente.nome }}</strong></p>
+                    <p><strong>{{ s.missao_existente.nome_completo }}</strong></p>
                     <p>{{ s.missao_existente.get_tipo_display }} • {{ s.missao_existente.get_status_display }}</p>
                 </div>
                 {% endif %}
