--- a/templates/htmx/missao_organograma.html
+++ b/templates/htmx/missao_organograma.html
@@ -1,7 +1,7 @@
 <!-- Organograma da missão -->
 <div class="organograma">
     <h3 style="text-align: center; color: #8b0000; margin-bottom: 1rem;">
-        {{ missao.nome }}
+        {{ missao.nome_completo }}
     </h3>
     
     <div style="text-align: center; margin-bottom: 1rem;">
