--- a/templates/htmx/oficiais_cards.html
+++ b/templates/htmx/oficiais_cards.html
@@ -53,7 +53,7 @@ Cards de comparação de oficiais com mini-gráfico de barras
             <ul>
                 {% for d in data.ultimas_missoes %}
                 <li>
-                    <span class="missao-nome">{{ d.missao.nome|truncatechars:30 }}</span>
+                    <span class="missao-nome">{{ d.missao.nome_completo|truncatechars:30 }}</span>
                     <span class="badge badge-{% if d.complexidade == 'ALTA' %}danger{% elif d.complexidade == 'MEDIA' %}warning{% else %}success{% endif %}">
                         {{ d.get_complexidade_display }}
                     </span>
